# capabara_visium_hd

./: .gitignore  main.py  pyproject.toml
models/fl_image_model/: thresholds.json
models/stardist/: thresholds.json
models/stardist/logs/images/: events.out.tfevents.1746500126.MacBook-Pro-3.local.35036.0.v2
models/test_model/: thresholds.json
models/test_model/FL3_annotation/: 16_22.geojson  16_25.geojson  16_29.geojson  35_41.geojson  43_37.geojson  44_19.geojson  6_20.geojson  6_21.geojson  7_19.geojson  7_20.geojson  7_22.geojson  fl2_tile_10240_37888.geojson  fl2_tile_10240_42496.geojson  fl2_tile_10240_61952.geojson  fl2_tile_10752_37376.geojson  fl2_tile_10752_43520.geojson  fl3_normal_tile_10240_8704.geojson  fl3_normal_tile_10240_9728.geojson  fl3_normal_tile_10752_6144.geojson  fl3_normal_tile_11264_12800.geojson  fl4_normal_tile_10240_12800.geojson  fl4_normal_tile_10240_15360.geojson  fl4_normal_tile_10240_22016.geojson  fl4_normal_tile_10752_23040.geojson  fl_t21_3_tile_10240_7680.geojson
models/test_model/nucleus_predictions/: tile_10240_10240_coords.npy  tile_10240_10752_coords.npy
notebooks/: 1_process_wsi.ipynb  2_align_histology_visiumHD.ipynb
notebooks/.ipynb_checkpoints/: 0_train_segmentation_model-checkpoint.ipynb  1_process_wsi-checkpoint.ipynb  2_process_tile_baysor-checkpoint.ipynb
src/CapybaraHD/alignment/: align.py
src/CapybaraHD/map/: map_adata.py  map_functions.py  map_wsi.py
src/CapybaraHD/process_adata/: read_adata.py
src/CapybaraHD/process_histology/: process_wsi.py
src/CapybaraHD/train/: __init__.py  stardist_model.py
(+78 files in other folders)
